# brandon-resume-bot

./: .gitignore  .gitignore_deploy  DESIGN.md  README.md  README_DEPLOY.md  app.py  app_deploy.py  env.example  pyproject.toml  requirements_hf.txt  tatus
data/: Brandon_Tom_Resume_bot.docx  Professional Summary.docx
src/brandon_bot/: __init__.py  bot.py  chat_interface.py  chat_interface_simple.py  config.py  document_processor.py
tests/: __init__.py  debug_resume.py  test_bot_basic.py  test_cli_interface.py
